k8s/deploys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: db-pvc
        - name: init-sql
          configMap:
            name: init-sql-config

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: backend
          image: ghcr.io/eusdenlin/cn-backend:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
        - name: frontend
          image: ghcr.io/eusdenlin/cn-frontend:latest
          ports:
            - containerPort: 5173
          resources:
            requests:
              cpu: 1000m
              memory: 1000Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
