k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: app-clusterip
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
